# emergent_cfm_dynamics

./: pyproject.toml
experiment/: cfm_toy_model.py  cfm_train.py  utils.py  visualise_results.py
