[project]
name = "cfm-toy-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "torch==2.9.0+cu128",
    "tqdm>=4.67.1",
]
[tool.uv.sources]
torch = {index = "torch_cuda"}
[[tool.uv.index]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
default = false
